<resources>
    <string name="app_name">Never I Have Ever</string>

    <!--Main-->
    <string name="main_play">Play</string>
    <string name="main_light" translatable="false">Light</string>
    <string name="main_normal" translatable="false">Normal</string>
    <string name="main_extreme" translatable="false">Extreme</string>
    <string name="mainSettings">Settings</string>

    <!--Question-->
    <string name="question_next">Next</string>

    <!--Settings-->
    <string name="pref_lang">Language</string>
    <string name="pref_night_mode">Enable night mode</string>
    <string name="pref_rate">Rate app</string>
</resources>
