<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.development.vvoitsekh.neverhaveiever.main.MainActivity"
    android:weightSum="1">

    <include layout="@layout/activity_base"
             android:id="@+id/include"/>

    <ToggleButton
        android:textOff="@string/main_light"
        android:textOn="@string/main_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainKidsButton"
        android:layout_above="@+id/mainTeenagerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <ToggleButton
        android:id="@+id/mainTeenagerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/main_normal"
        android:textOn="@string/main_normal"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/mainAdultButton"
        android:layout_alignStart="@+id/mainKidsButton"/>

    <ToggleButton
        android:id="@+id/mainAdultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/main_extreme"
        android:textOn="@string/main_extreme"
        android:layout_above="@+id/mainSettingsButton"
        android:layout_alignStart="@+id/mainTeenagerButton"
        android:layout_marginBottom="45dp"/>

    <Button
        android:id="@+id/mainSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/mainSettings"/>

    <Button
        android:id="@+id/mainPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_play"
        android:layout_above="@+id/mainKidsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>
